--- a/index.html
+++ b/index.html
@@ -2312,7 +2312,7 @@
 
             <!-- <div class="container-student-impact-data">
 
-					<div class="impact-left-data-box">
+				   	<div class="impact-left-data-box">
 
 						<p class="student-testimonials-title">Student Testimonial</p>
 
@@ -2386,20 +2386,26 @@
 
         <div class="tab-pane certified-institutes" id="Certified-Institutes">
           <div class="wrapper-certifide-container">
+
             <div class="rallives-foundation-tab-box">
-              <img src="update-image/orchid-background-img-2.jpeg" alt="" />
+
+              <img src="update-image/orchid-background-img-2.jpeg.png" alt="" />
 
               <div class="inner-content-tab">
-                <div class="logo-foundation-box">
-                  <img src="update-image/orchid-reallives-logo.svg" alt="" />
-                </div>
 
                 <h1 class="title-of-foundation">
                   RealLives Foundation is proud to certify <br />
                   The Orchid School Pune as a ChangeMaker School
                 </h1>
+
               </div>
+
+                <div class="logo-foundation-box">
+                 <img src="update-image/orchid-reallives-logo.svg" alt="" />
+                </div>
+
             </div>
+            
 
             <!-- Your orchid-school specific content here -->
 
@@ -2631,7 +2637,10 @@
 
                     <div class="inner-data-description">
                       <p>
-                        I used to think global problems were too big for students like us. Experiencing life through the SDGs helped me understand people’s struggles and showed me that even small business ideas can create real change
+                        I used to think global problems were too big for
+                        students like us. Experiencing life through the SDGs
+                        helped me understand people’s struggles and showed me
+                        that even small business ideas can create real change
                       </p>
                     </div>
 
@@ -2647,7 +2656,10 @@
 
                     <div class="inner-data-description">
                       <p>
-                        Living a life connected to the SDGs helped me feel empathy, not just learn facts. It made our social business idea more meaningful because we designed it for real people, not imaginary problems.
+                        Living a life connected to the SDGs helped me feel
+                        empathy, not just learn facts. It made our social
+                        business idea more meaningful because we designed it for
+                        real people, not imaginary problems.
                       </p>
                     </div>
 
@@ -2663,7 +2675,10 @@
 
                     <div class="inner-data-description">
                       <p>
-                        This experience made me realize that empathy is the first step to changemaking. Understanding global challenges helped our team build a business idea that focuses on impact, not just profit.
+                        This experience made me realize that empathy is the
+                        first step to changemaking. Understanding global
+                        challenges helped our team build a business idea that
+                        focuses on impact, not just profit.
                       </p>
                     </div>
 
@@ -2681,7 +2696,10 @@
               </p>
 
               <div class="changemaker-certificate">
-                <img src="https://reallivesfrontend.s3.us-east-1.amazonaws.com/certificate.svg" alt="" />
+                <img
+                  src="https://reallivesfrontend.s3.us-east-1.amazonaws.com/certificate.svg"
+                  alt=""
+                />
               </div>
             </div>
           </div>
