--- a/index.html
+++ b/index.html
@@ -2894,6 +2894,14 @@
                 onclick="setActiveTab('about')"
                 >About RCMI
               </a>
+
+              <a class="footer-ankar-style" href="javascript:void(0)" onclick="setActiveTab('Certified-Institutes')">
+                Certified-Institutes
+              </a>
+
+              <a class="footer-ankar-style" href="javascript:void(0)" onclick="setActiveTab('impact')">
+                Our impact
+              </a>
             </span>
           </div>
 
@@ -2911,6 +2919,7 @@
           </div>
         </div>
       </footer>
+
     </div>
 
     <!-- js  -->
